--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,11 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color:pink;
+    
 }
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #fff;
+  background-color: #ea00ff;
     color: #000;
     font-size: 15px;
     line-height: 1.6;
