--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #ea00ff;
+    background-color: #ffffff;
     color: #000;
     font-size: 15px;
     line-height: 1.6;
